--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Amazon.co.bd</title>
-  <link rel="stylesheet" href="/css/style.css" />
+
+  <link rel="stylesheet" href="css/style.css" />
+
   <!-- bootstrap 5 style -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
   <!-- foont awesome  -->
   <script src="https://kit.fontawesome.com/1aee76acf0.js" crossorigin="anonymous"></script>
 
@@ -22,31 +25,28 @@
 <body>
 
   <section class="container">
-    <header>
 
+    <header>
       <h2 class="text-center p-2"><i class="fas fa-store"></i> Amazon<small class="text-success">.co.bd</small>
       </h2>
     </header>
+
     <main class="main">
+      <!-- search button  -->
       <div class="search-field">
-
-
-        <!-- search button  -->
-        <div class="input-group mb-3 w-50 mx-auto search-box m-3">
+        <div class="input-group my-4 w-50 mx-auto search-box m-3">
           <input id="input-field" type="text" class="form-control search-field p-2 " aria-label="Recipient's username"
             aria-describedby="button-addon2">
           <button class="btn btn-outline-secondary btn-success text-white" type="button" id="search-btn"
             onclick="loadProducts()">Search</button>
         </div>
-        <!-- search button end  -->
-
       </div>
+      <!-- search button end  -->
 
       <div class="row">
-        <!-- card  -->
+        <!-- card start -->
         <div class="col-md-9 col-lg-9 col-sm-7">
           <div id="all-products" class="row row-cols-1 row-cols-md-3 g-4">
-
           </div>
         </div>
 
